# warlock

./: #Makefile#  .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.zig  flake.nix  valgrind-out.txt  valgrind.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 082hf4jh31pn4b3anggfklqw8higyr0y-source  920a6ivyd50598z8djw9x3mr33gys0j5-source
docs/: builtins.org
include/: meridian.h  meridian_allocator.h  meridian_atom.h  meridian_codegen.h  meridian_common.h  meridian_env.h  meridian_error.h  meridian_eval.h  meridian_hash.h  meridian_intrinsics.h  meridian_opcodes.h  meridian_parser.h  meridian_printer.h  meridian_reader.h  meridian_string.h  meridian_types.h  meridian_vm.h  scheme.h  scheme_allocator.h  scheme_atom.h  scheme_codegen.h  scheme_common.h  scheme_env.h  scheme_error.h  scheme_eval.h  scheme_hash.h  scheme_opcodes.h  scheme_printer.h  scheme_reader.h  scheme_string.h  scheme_vm.h  warlock.h  warlock_allocator.h  warlock_arena.h  warlock_atom.h  warlock_builtins.h  warlock_command_args.h  warlock_common.h  warlock_ctx.h  warlock_error.h  (+8 more)
lib/std/: comparison.mr
src/: #warlock_atom.c#  atom.zig  builtins.zig  context.zig  eval.zig  main.zig  meridian.c  meridian_allocator.c  meridian_atom.c  meridian_binary.c  meridian_codegen.c  meridian_common.c  meridian_env.c  meridian_error.c  meridian_eval.c  meridian_hash.c  meridian_intrinsics.c  meridian_opcodes.c  meridian_parser.c  meridian_printer.c  meridian_reader.c  meridian_string.c  meridian_types.c  meridian_vm.c  messages.zig  reader.zig  scheme.c  scheme_allocator.c  scheme_atom.c  scheme_binary.c  scheme_codegen.c  scheme_common.c  scheme_env.c  scheme_error.c  scheme_eval.c  scheme_hash.c  scheme_opcodes.c  scheme_printer.c  scheme_reader.c  scheme_string.c  (+22 more)
test/: test.mr  test.psg
